WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16032
JS minidom is not portable
https://bugs.webkit.org/show_bug.cgi?id=16032
Summary
JS minidom is not portable
Alp Toker
Reported
2007-11-17 14:07:47 PST
JavaScriptCore/API/minidom.c is not portable. It has a trivial dependency on CFString and is missing a couple of includes. JavaScriptCore.h also needs to be fixed as described in #16029 for this to actually build on non-CF platforms.
Attachments
Make minidom.c portable
(2.02 KB, patch)
2007-11-17 14:33 PST
,
Alp Toker
darin
: review+
Details
Formatted Diff
Diff
Make minidom.c portable
(2.07 KB, patch)
2007-11-17 15:02 PST
,
Alp Toker
eric
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2007-11-17 14:33:32 PST
Created
attachment 17330
[details]
Make minidom.c portable Note that it will not actually compile until JavaScriptCore.h is also fixed (see #16029)
Alp Toker
Comment 2
2007-11-17 15:02:24 PST
Created
attachment 17331
[details]
Make minidom.c portable This also fixes exception output which was being sent to stderr instead of stdout.
Eric Seidel (no email)
Comment 3
2007-11-17 15:05:29 PST
Comment on
attachment 17331
[details]
Make minidom.c portable Looks fine to me. r=me.
Alp Toker
Comment 4
2007-11-17 15:15:21 PST
Landed in
r27879
.
Darin Adler
Comment 5
2007-11-17 15:20:35 PST
Comment on
attachment 17330
[details]
Make minidom.c portable Looks fine. It's going to be tricky to make this truly platform-independent though, because Mac OS X uses a special include style for frameworks (#include <JavaScriptCore/JavaScriptCore.h>), and I would not expect the library to work this way on other platforms.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug