2007-11-17  Alp Toker  <alp@atoker.com>

Reviewed by Eric.

        http://bugs.webkit.org/show_bug.cgi?id=16032
        JS minidom is not portable

        Use a plain UTF-8 string instead of a CFString.

        Print to stdout, not stderr like CFShow() would have done, since that
        behaviour seems unintentional.

        * API/minidom.c:
        (main):


Canonical link: https://commits.webkit.org/21798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27879 268f45cc-cd09-0410-ab3c-d52691b4dbfc